force-app/main/default/objects/Yacht_Reservation__c/Yacht_Reservation__c.object-meta.xml
<CustomObject>
    <label>Yacht Reservation</label>
    <nameField>
        <displayFormat>RES-{000000}</displayFormat>
        <label>Yacht Reservation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Yacht Reservations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>