force-app/main/default/objects/Yacht_Reservation__c/fields/External_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Reference_ID__c</fullName>
    <externalId>true</externalId>
    <label>External Reference ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>