force-app/main/default/objects/Yacht_Reservation__c/fields/Idempotency_Key__c.field-meta.xml
<CustomField>
    <fullName>Idempotency_Key__c</fullName>
    <description>Composite key of YachtId + ReservationDate + GuestEmail

To be used to prevent duplicate reservations in same session</description>
    <externalId>true</externalId>
    <label>Idempotency Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>