force-app/main/default/objects/Yacht_Reservation__c/fields/Yacht__c.field-meta.xml
<CustomField>
    <fullName>Yacht__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Yacht</label>
    <referenceTo>Yacht__c</referenceTo>
    <relationshipLabel>Yacht Reservations</relationshipLabel>
    <relationshipName>Yacht_Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>